fix text-truncate not working

--- a/app/assets/stylesheets/tylium/modules/projects.scss
+++ b/app/assets/stylesheets/tylium/modules/projects.scss
@@ -114,7 +114,6 @@ body.projects {
         color: $linkColor;
         padding-bottom: 0.5rem;
         pointer-events: auto;
-        width: max-content;
 
         &:active,
         &:focus,
